# CEELL

./: .clang-tidy  .gitignore  CMakeLists.txt  Kconfig  Kconfig.ceell  prj.conf  sysbuild.cmake  sysbuild.conf  west.yml
.github/workflows/: renode-test.yml
boards/: mr_canhubk3.overlay
ceell/: CMakeLists.txt
ceell/core/: CMakeLists.txt  config_parser.c  config_parser.h  health_monitor.c  health_monitor.h  lifecycle.c  lifecycle.h  net_setup.c  net_setup.h  node_identity.c  node_identity.h  safe_state.c  safe_state.h  service_registry.c  service_registry.h  timing.c  timing.h  timing_budget.c  timing_budget.h  watchdog.c  watchdog.h
ceell/network/: CMakeLists.txt  discovery.c  discovery.h  messaging.c  messaging.h  msg_deadline.c  msg_deadline.h  msg_priority.h  msg_redundancy.c  msg_redundancy.h  service_discovery.c  service_discovery.h  tsn.c  tsn.h
ceell/osal/: CMakeLists.txt  osal.h  osal_atomic.h  osal_dfu.h  osal_flash.h  osal_http.h  osal_json.h  osal_log.h  osal_net.h  osal_socket.h  osal_stream_flash.h  osal_sync.h  osal_thread.h  osal_time.h  osal_version.h
ceell/osal/zephyr/: CMakeLists.txt  osal_atomic.c  osal_dfu.c  osal_flash.c  osal_http.c  osal_net.c  osal_socket.c  osal_stream_flash.c  osal_sync.c  osal_thread.c  osal_time.c
ceell/ota/: CMakeLists.txt  ota_client.c  ota_client.h  ota_state.c  ota_state.h  ota_version.c  ota_version.h
config/: node_body.json  node_chassis.json  node_lights.json
docs/: architecture.html  fmea_messaging.md  requirements.md  timing_budgets.md  traceability.md  tsn_design.md
simulation/renode/: ceell_3node.resc  ceell_single.resc  mr_canhubk3_ceell.repl
src/: main.c
sysbuild/: ceell-app.overlay  mcuboot.conf  mcuboot.overlay.conf  mcuboot_mr_canhubk3.overlay
tests/robot/: s32k_clock_fixes.resource  test_boot.robot  test_discovery.robot  test_fault_injection.robot  test_services.robot  test_timing.robot
tests/unit/config_parser/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/config_parser/src/: main.c
tests/unit/health_monitor/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/health_monitor/src/: main.c
tests/unit/msg_deadline/: CMakeLists.txt  testcase.yaml
tests/unit/msg_deadline/src/: main.c
tests/unit/msg_priority/: CMakeLists.txt  testcase.yaml
tests/unit/msg_priority/src/: main.c
tests/unit/msg_redundancy/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/msg_redundancy/src/: main.c
tests/unit/osal/: CMakeLists.txt  testcase.yaml
tests/unit/osal/src/: main.c
tests/unit/ota_state/: CMakeLists.txt  testcase.yaml
tests/unit/ota_state/src/: main.c
tests/unit/ota_version/: CMakeLists.txt  testcase.yaml
tests/unit/ota_version/src/: main.c
tests/unit/safe_state/: CMakeLists.txt  testcase.yaml
tests/unit/safe_state/src/: main.c
tests/unit/timing/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/timing/src/: main.c
tests/unit/timing_budget/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/timing_budget/src/: main.c
tests/unit/tsn/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/tsn/src/: main.c
tools/: check_coverage.py  check_osal_isolation.sh  check_traceability.py  gen_config_bin.py
